Mesh selection issue: vertex 0 is never selected when using circle, RMB or border selection #53512

Closed
opened 2017-12-08 14:19:07 +01:00 by Dalai Felinto · 7 comments

Blender Version
Broken: 9f5bf197a0
Worked: 9f5bf197a0^

Short description of error
I can't select the vertex 0 for any mesh unless I use "select all".

Exact steps for others to reproduce the error
Try to select the vertex in this mesh:

Or

  • Add a plane
  • Try to manually (RMB, circle select, border select, it doesn't matter) all the vertices
  • One of the vertices is never selected, and it's always the same vertex.

I get the same problem with cubes, torus, ... the vertex not selectable is always the 0. I can select it with 'A' though.

**Blender Version** Broken: 9f5bf197a0 Worked: 9f5bf197a0^ **Short description of error** I can't select the vertex 0 for any mesh unless I use "select all". **Exact steps for others to reproduce the error** Try to select the vertex in this mesh: Or * Add a plane * Try to manually (RMB, circle select, border select, it doesn't matter) all the vertices * One of the vertices is never selected, and it's always the same vertex. I get the same problem with cubes, torus, ... the vertex not selectable is always the 0. I can select it with 'A' though.
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Campbell Barton was assigned by Dalai Felinto 2017-12-08 14:20:16 +01:00
Author
Owner

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Author
Owner

I just updated the bug because this is happening in master. @mano-wii can you check if it wasn't one of your commits that did this?

I just updated the bug because this is happening in master. @mano-wii can you check if it wasn't one of your commits that did this?
Campbell Barton was unassigned by Dalai Felinto 2017-12-08 14:27:41 +01:00
Germano Cavalcante was assigned by Dalai Felinto 2017-12-08 14:27:41 +01:00
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Author
Owner

Bug introduced on 9f5bf197a0.

Bug introduced on 9f5bf197a0.

This issue was referenced by e6838ecc26

This issue was referenced by e6838ecc260441dcba0abfcd8a8292b94081df64

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53512
No description provided.